# c_demo

./: CMakeLists.txt  README.md  main.c
01_day/: function_demo.h  hello.c
02_day/: IoTest.c  test.c
03_day/: array_demo.c  array_find.h
04_day/: array_exer.c  array_exr2.c  pointer.c  pointer2.c  pointer_array.c
06_day/: function_define.c
